Added files via upload

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Analog 5 Buttons Library
 version=1.0.1
-author=DataMiner
-maintainer=exon@freemail.hu
+author=DataMiner Ltd.
+maintainer=kiss-gabor@outlook.hu
 sentence=Arduino library for the KEYES_AD_KEY, LCD_KEYPAD or custom module
 paragraph=Arduino library for the KEYES_AD_KEY, LCD_KEYPAD or custom module
 category=Sensors
